# sams-product-os

./: .cursorignore  .cursorindexignore  .env.example  .gitignore  .mcp.json.example  AGENTS.md  BACKLOG.md  CONTRIBUTING.md  GETTING-STARTED.md  LICENSE  README.md  TOOLS.md  config.yaml  pyproject.toml  setup.sh
commands/: commit.md  process-backlog.md
core/: README.md  config.yaml
core/evals/: README.md  run_evals.sh
core/task-manager/: mcp.json.sample
core/task-manager-mcp/: server.py
evals/: README.md  conftest.py  evals.json  run_evals.py  test_agent_behavior.py  test_llm_behavior.py  test_mcp_server.py  test_workflows.py  trigger-eval.json
examples/example_files/: config-example.md  (+5 more)
initiatives/: README.md
integrations/: README.md
knowledge/: AGENTS.md  README.md
mcp/: README.md
projects/: AGENTS.md
tasks/: AGENTS.md  README.md
templates/: about-me-template.md  backlog-template.md  brief-template.md  competitor-matrix-template.md  initiative-template.md  opportunity-template.md  project-brief-template.md  research-synthesis-template.md  roadmap-template.md  spec-template.md  stakeholder-update-template.md  task-template.md  user-stories-template.md
workflows/: README.md  bugs.md  build-mcp.md  build-skill.md  commit.md  competitor-research.md  daily-planning.md  eng-manager.md  github.md  gtm-launch.md  mcp-generator.md  okrs.md  process-backlog.md  process-meetings.md  process-transcripts.md  product-docs.md  product-processes.md  product-updates.md  prototype.md  roadmap.md  task-manager.md  team-onboarding.md  technical-writing.md  user-research.md  weekly-recap.md  weekly-review.md  write-brief.md  write-decision.md  write-prd.md  write-spec.md  write-user-stories.md
(+255 files in other folders)
