[project]
name = "sams-product-os"
version = "0.1.0"
description = "A personal operating system for Claude Code/Cursor - how I organize my PM workspace"
readme = "README.md"
authors = [
    { name = "Sam Kawsarani" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
integrations = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]
evals = [
    "pytest>=7.0.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
]
all = [
    "sams-pm-os[integrations,evals,dev]",
]

[tool.setuptools.packages.find]
include = ["tools*", "evals*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning",
]
